# ilmac-ubuntu-dev

./: .editorconfig  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-compose_0.yml  docker-start.sh  pyproject.toml
configs/: .bashrc  bashrc  crontab
projects/: README.md  bid-notice-web_entrypoint.sh  cp.sh
scripts/: bid-notice-web_entrypoint.sh
